fix font weight on ios

--- a/src/styles/components/_labelButton.scss
+++ b/src/styles/components/_labelButton.scss
@@ -9,6 +9,7 @@
     border: none;
     font-size: inherit;
     font-family: inherit;
+    font-weight: inherit;
     color: inherit;
     text-shadow: inherit;
     letter-spacing: inherit;
